--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "reselect": "^4.1.6",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5",
     "typescript-fsa": "^3.0.0",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.24",
     "@types/redux": "^3.6.0",
+    "@types/reselect": "^2.2.0",
     "@types/styled-components": "^5.1.24"
   }
 }
