"postbuild": "copy build\\index.html build\\404.html",

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "postbuild": "copy build\\index.html build\\404.html",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
