--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "redux-thunk": "^3.1.0",
     "reselect": "^4.1.6",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5",
